--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Audio Deepfake Detection and Explainability Survey</title>
+  <title>Audio Deepfake Explainability Survey</title>
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
@@ -16,12 +16,6 @@
       margin: auto;
     }
 
-    h1 {
-      text-align: center;
-      margin-bottom: 24px;
-      font-weight: 700;
-    }
-
     .card {
       background: #ffffff;
       border: 1px solid #e5e7eb;
@@ -30,31 +24,8 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
 
-    input, select {
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #d1d5db;
-      width: 100%;
-      box-sizing: border-box;
-      font-size: 14px;
-    }
-
-    label {
-      font-size: 14px;
-      font-weight: 600;
-      color: #374151;
-    }
-
-    .required {
-      color: red;
-      margin-left: 4px;
-    }
-
-    .error {
-      color: red;
-      font-size: 13px;
-      margin-top: 6px;
-      display: none;
+    h1, h2 {
+      text-align: center;
     }
 
     .field {
@@ -64,28 +35,18 @@
       margin-bottom: 18px;
     }
 
-    .consent-wrapper {
-      display: flex;
-      justify-content: center;
-      margin: 24px 0;
+    input, select {
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #d1d5db;
       width: 100%;
     }
 
-    .consent-row {
-      display: grid;
-      grid-template-columns: 24px 1fr;
-      align-items: start;
-      gap: 14px;
-      width: 85%;
-      color: #4b5563;
-      font-size: 14px;
-      line-height: 1.4;
-    }
-
-    .button-wrapper {
-      display: flex;
-      justify-content: center;
-      margin-top: 8px;
+    .consent-box {
+      background: #f3f4f6;
+      padding: 16px;
+      border-radius: 12px;
+      margin: 20px 0;
     }
 
     button {
@@ -97,17 +58,6 @@
       font-size: 14px;
       cursor: pointer;
     }
-
-    button:hover {
-      background: #4338ca;
-    }
-
-    #consent {
-      transform: scale(1.15);
-      accent-color: #4f46e5;
-      margin-top: 2px;
-    }
-
   </style>
 </head>
 
@@ -115,118 +65,99 @@
 
 <div class="container">
 
-<h1>Audio Deepfake Detection and Explainability Survey</h1>
+<h1>Audio Deepfake Explainability Survey</h1>
+<h2>Understanding how people perceive and explain artifacts in synthetic speech</h2>
 
 <div class="card">
-  <h2>Participant Details</h2>
 
-  <div class="field">
-    <label>Name <span class="required">*</span></label>
-    <input type="text" id="name">
-    <div class="error" id="nameErr">Name is required.</div>
-  </div>
+<h3>Participant Information</h3>
 
-  <div class="field">
-    <label>Age <span class="required">*</span></label>
-    <input type="number" id="age" min="10" max="100">
-    <div class="error" id="ageErr">Age is required.</div>
-  </div>
-
-  <div class="field">
-    <label>Gender <span class="required">*</span></label>
-    <select id="gender">
-      <option value="">Select</option>
-      <option>Male</option>
-      <option>Female</option>
-      <option>Other</option>
-      <option>Prefer not to say</option>
-    </select>
-    <div class="error" id="genderErr">Please select your gender.</div>
-  </div>
-
-  <div class="field">
-    <label>Hearing Impairment <span class="required">*</span></label>
-    <select id="hearing">
-      <option value="">Select</option>
-      <option>No</option>
-      <option>Mild</option>
-      <option>Significant</option>
-      <option>Prefer not to say</option>
-    </select>
-    <div class="error" id="hearingErr">Please select hearing status.</div>
-  </div>
-
-  <div class="field">
-    <label>Technical Difficulty <span class="required">*</span></label>
-    <select id="tech">
-      <option value="">Select</option>
-      <option>None</option>
-      <option>Mild</option>
-      <option>High</option>
-    </select>
-    <div class="error" id="techErr">Please select technical difficulty.</div>
-  </div>
-
-  <div class="consent-wrapper">
-    <div class="consent-row">
-      <input type="checkbox" id="consent">
-      <span>
-        I understand that my data will remain confidential and used only for research.
-      </span>
-    </div>
-  </div>
-  <div class="error" id="consentErr" style="text-align:center;">
-    Please accept the consent to continue.
-  </div>
-
-  <div class="button-wrapper">
-    <button onclick="proceed()">Start Survey</button>
-  </div>
+<div class="field">
+<label>Name *</label>
+<input type="text" id="name">
 </div>
 
+<div class="field">
+<label>Age *</label>
+<input type="number" id="age" min="18">
+</div>
+
+<div class="field">
+<label>Gender *</label>
+<select id="gender">
+  <option value="">Select</option>
+  <option>Male</option>
+  <option>Female</option>
+  <option>Non-binary</option>
+  <option>Prefer not to say</option>
+</select>
+</div>
+
+<div class="field">
+<label>Email *</label>
+<input type="email" id="email">
+</div>
+
+<div class="field">
+<label>Hearing impairment? *</label>
+<select id="hearing">
+  <option value="">Select</option>
+  <option>No</option>
+  <option>Yes (mild)</option>
+  <option>Yes (moderate)</option>
+  <option>Yes (severe)</option>
+  <option>Prefer not to say</option>
+</select>
+</div>
+
+<div class="field">
+<label>How familiar are you with audio/speech technologies? *</label>
+<select id="familiar">
+  <option value="">Select</option>
+  <option>Not familiar at all</option>
+  <option>Slightly familiar</option>
+  <option>Moderately familiar</option>
+  <option>Very familiar</option>
+  <option>Expert (researcher/professional)</option>
+</select>
+</div>
+
+<div class="consent-box">
+<b>Consent Statement</b>
+<ul>
+<li>I understand that my responses will be used only for academic research.</li>
+<li>No personally identifiable information will be published.</li>
+<li>Participation is voluntary; I may stop at any time.</li>
+<li>I confirm I am 18 years or older.</li>
+</ul>
+
+<input type="checkbox" id="consent">  
+I have read and understood the above and consent to participate.
+</div>
+
+<button onclick="proceed()">Proceed</button>
+
+</div>
 </div>
 
 <script>
-function clearErrors() {
-  document.querySelectorAll(".error").forEach(e => e.style.display = "none");
-}
-
-function showError(id) {
-  document.getElementById(id).style.display = "block";
-}
-
 function proceed() {
-  clearErrors();
 
-  let valid = true;
+  if (!name.value || !age.value || !email.value || !hearing.value || !familiar.value || !consent.checked) {
+    alert("Please complete all required fields and consent.");
+    return;
+  }
 
-  const name = document.getElementById("name").value.trim();
-  const age = document.getElementById("age").value.trim();
-  const gender = document.getElementById("gender").value;
-  const hearing = document.getElementById("hearing").value;
-  const tech = document.getElementById("tech").value;
-  const consent = document.getElementById("consent").checked;
+  localStorage.setItem("name", name.value);
+  localStorage.setItem("age", age.value);
+  localStorage.setItem("gender", gender.value);
+  localStorage.setItem("email", email.value);
+  localStorage.setItem("hearing", hearing.value);
+  localStorage.setItem("familiar", familiar.value);
 
-  if (!name) { showError("nameErr"); valid = false; }
-  if (!age) { showError("ageErr"); valid = false; }
-  if (!gender) { showError("genderErr"); valid = false; }
-  if (!hearing) { showError("hearingErr"); valid = false; }
-  if (!tech) { showError("techErr"); valid = false; }
-  if (!consent) { showError("consentErr"); valid = false; }
-
-  if (!valid) return;
-
-  localStorage.setItem("name", name);
-  localStorage.setItem("age", age);
-  localStorage.setItem("gender", gender);
-  localStorage.setItem("hearing", hearing);
-  localStorage.setItem("tech", tech);
-
-  window.location.href = "instructions.html";
-
+  window.location.href = "context.html";
 }
 </script>
 
 </body>
 </html>
-
