--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,13 @@
       font-size: 14px;
       cursor: pointer;
     }
+
+    .error {
+      color: #dc2626;
+      font-size: 13px;
+      margin-top: 4px;
+      display: none;
+    }
   </style>
 </head>
 
@@ -75,11 +82,13 @@
 <div class="field">
 <label>Name *</label>
 <input type="text" id="name">
+<div class="error" id="nameErr">Name is required.</div>
 </div>
 
 <div class="field">
 <label>Age *</label>
 <input type="number" id="age" min="18">
+<div class="error" id="ageErr">Age is required (18+).</div>
 </div>
 
 <div class="field">
@@ -91,11 +100,13 @@
   <option>Non-binary</option>
   <option>Prefer not to say</option>
 </select>
+<div class="error" id="genderErr">Please select gender.</div>
 </div>
 
 <div class="field">
 <label>Email *</label>
 <input type="email" id="email">
+<div class="error" id="emailErr">Valid email is required.</div>
 </div>
 
 <div class="field">
@@ -108,6 +119,7 @@
   <option>Yes (severe)</option>
   <option>Prefer not to say</option>
 </select>
+<div class="error" id="hearingErr">Please select an option.</div>
 </div>
 
 <div class="field">
@@ -120,6 +132,7 @@
   <option>Very familiar</option>
   <option>Expert (researcher/professional)</option>
 </select>
+<div class="error" id="familiarErr">Please select familiarity level.</div>
 </div>
 
 <div class="consent-box">
@@ -133,6 +146,7 @@
 
 <input type="checkbox" id="consent">  
 I have read and understood the above and consent to participate.
+<div class="error" id="consentErr">You must provide consent to continue.</div>
 </div>
 
 <button onclick="proceed()">Proceed</button>
@@ -143,21 +157,12 @@ I have read and understood the above and consent to participate.
 <script>
 function proceed() {
 
-  if (!name.value || !age.value || !email.value || !hearing.value || !familiar.value || !consent.checked) {
-    alert("Please complete all required fields and consent.");
-    return;
-  }
+  // Hide all previous errors
+  document.querySelectorAll(".error").forEach(e => e.style.display = "none");
 
-  localStorage.setItem("name", name.value);
-  localStorage.setItem("age", age.value);
-  localStorage.setItem("gender", gender.value);
-  localStorage.setItem("email", email.value);
-  localStorage.setItem("hearing", hearing.value);
-  localStorage.setItem("familiar", familiar.value);
+  let valid = true;
 
-  window.location.href = "context.html";
-}
-</script>
-
-</body>
-</html>
+  const name = document.getElementById("name").value.trim();
+  const age = document.getElementById("age").value;
+  const gender = document.getElementById("gender").value;
+  const email = document.getElementById("email")
