--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,25 @@
       width: 100%;
     }
 
+    /* -------- YOUR REQUEST #1: RED ASTERISKS -------- */
+    .required {
+      color: #dc2626; /* red */
+      font-weight: 600;
+    }
+
     .consent-box {
       background: #f3f4f6;
       padding: 16px;
       border-radius: 12px;
       margin: 20px 0;
+    }
+
+    /* -------- YOUR REQUEST #2: INLINE CHECKBOX + TEXT -------- */
+    .consent-row {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-top: 12px;
     }
 
     button {
@@ -57,6 +71,13 @@
       border-radius: 8px;
       font-size: 14px;
       cursor: pointer;
+    }
+
+    .error {
+      color: #dc2626;
+      font-size: 13px;
+      margin-top: 4px;
+      display: none;
     }
   </style>
 </head>
@@ -73,17 +94,19 @@
 <h3>Participant Information</h3>
 
 <div class="field">
-<label>Name *</label>
+<label>Name <span class="required">*</span></label>
 <input type="text" id="name">
+<div class="error" id="nameErr">Name is required.</div>
 </div>
 
 <div class="field">
-<label>Age *</label>
+<label>Age <span class="required">*</span></label>
 <input type="number" id="age" min="18">
+<div class="error" id="ageErr">Age is required (18+).</div>
 </div>
 
 <div class="field">
-<label>Gender *</label>
+<label>Gender <span class="required">*</span></label>
 <select id="gender">
   <option value="">Select</option>
   <option>Male</option>
@@ -91,15 +114,17 @@
   <option>Non-binary</option>
   <option>Prefer not to say</option>
 </select>
+<div class="error" id="genderErr">Please select gender.</div>
 </div>
 
 <div class="field">
-<label>Email *</label>
+<label>Email <span class="required">*</span></label>
 <input type="email" id="email">
+<div class="error" id="emailErr">Valid email is required.</div>
 </div>
 
 <div class="field">
-<label>Do you have any hearing impairment or hearing-related condition? *</label>
+<label>Do you have any hearing impairment? <span class="required">*</span></label>
 <select id="hearing">
   <option value="">Select</option>
   <option>No</option>
@@ -108,31 +133,39 @@
   <option>Yes (severe)</option>
   <option>Prefer not to say</option>
 </select>
+<div class="error" id="hearingErr">Please select an option.</div>
 </div>
 
 <div class="field">
-<label>How familiar are you with audio/speech technologies? *</label>
+<label>How familiar are you with audio/speech technologies? <span class="required">*</span></label>
 <select id="familiar">
   <option value="">Select</option>
   <option>Not familiar at all</option>
   <option>Slightly familiar</option>
   <option>Moderately familiar</option>
   <option>Very familiar</option>
-  <option>Expert (researcher / professional)</option>
+  <option>Expert (researcher/professional)</option>
 </select>
+<div class="error" id="familiarErr">Please select familiarity level.</div>
 </div>
 
 <div class="consent-box">
 <b>Consent Statement</b>
 <ul>
-<li>I understand that my responses will be used only for academic research purposes.</li>
-<li>I understand that no personally identifiable information will be shared or published.</li>
-<li>I understand that my participation is voluntary, and I may stop at any time.</li>
-<li>I confirm that I am 18 years or older.</li>
+<li>I understand that my responses will be used only for academic research.</li>
+<li>No personally identifiable information will be published.</li>
+<li>Participation is voluntary; I may stop at any time.</li>
+<li>I confirm I am 18 years or older.</li>
 </ul>
 
-<input type="checkbox" id="consent">  
-I have read and understood the above information and consent to participate in this research study.
+<!-- INLINE CHECKBOX + TEXT -->
+<div class="consent-row">
+  <input type="checkbox" id="consent">
+  <span>
+  I have read and understood the above information and consent to participate in this research study.
+  </span>
+</div>
+<div class="error" id="consentErr">You must provide consent to continue.</div>
 </div>
 
 <button onclick="proceed()">Proceed</button>
@@ -143,17 +176,34 @@ I have read and understood the above information and consent to participate in t
 <script>
 function proceed() {
 
-  if (!name.value || !age.value || !email.value || !hearing.value || !familiar.value || !consent.checked) {
-    alert("Please complete all required fields and consent.");
-    return;
-  }
+  document.querySelectorAll(".error").forEach(e => e.style.display = "none");
 
-  localStorage.setItem("name", name.value);
-  localStorage.setItem("age", age.value);
-  localStorage.setItem("gender", gender.value);
-  localStorage.setItem("email", email.value);
-  localStorage.setItem("hearing", hearing.value);
-  localStorage.setItem("familiar", familiar.value);
+  let valid = true;
+
+  const name = document.getElementById("name").value.trim();
+  const age = document.getElementById("age").value;
+  const gender = document.getElementById("gender").value;
+  const email = document.getElementById("email").value.trim();
+  const hearing = document.getElementById("hearing").value;
+  const familiar = document.getElementById("familiar").value;
+  const consent = document.getElementById("consent").checked;
+
+  if (!name) { document.getElementById("nameErr").style.display = "block"; valid = false; }
+  if (!age) { document.getElementById("ageErr").style.display = "block"; valid = false; }
+  if (!gender) { document.getElementById("genderErr").style.display = "block"; valid = false; }
+  if (!email) { document.getElementById("emailErr").style.display = "block"; valid = false; }
+  if (!hearing) { document.getElementById("hearingErr").style.display = "block"; valid = false; }
+  if (!familiar) { document.getElementById("familiarErr").style.display = "block"; valid = false; }
+  if (!consent) { document.getElementById("consentErr").style.display = "block"; valid = false; }
+
+  if (!valid) return;
+
+  localStorage.setItem("name", name);
+  localStorage.setItem("age", age);
+  localStorage.setItem("gender", gender);
+  localStorage.setItem("email", email);
+  localStorage.setItem("hearing", hearing);
+  localStorage.setItem("familiar", familiar);
 
   window.location.href = "context.html";
 }
