Fix typo in context.html list item

--- a/public/context.html
+++ b/public/context.html
@@ -58,7 +58,7 @@ In this study, we are interested in how people perceive these artifacts and how 
 
 <ul>
 <li>You do not need any technical knowledge to participate.</li>
-<li>There are no right or wrong answers—only your honest perception.</li>
+<li>There are no right or wrong answers only your honest perception.</li>
 </ul>
 
 <p><b>On the next page, you will find instructions on how to complete the listening tasks.</b></p>
