Revise instructions for the listening task
Updated the title and content of the instructions for clarity and specificity regarding the listening task.

--- a/public/instructions.html
+++ b/public/instructions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Survey Instructions</title>
+  <title>Instructions for the Listening Task</title>
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
@@ -18,8 +18,16 @@
 
     h1 {
       text-align: center;
-      margin-bottom: 24px;
+      margin-bottom: 8px;
       font-weight: 700;
+    }
+
+    h3 {
+      text-align: center;
+      font-weight: 500;
+      color: #4b5563;
+      margin-top: 0;
+      margin-bottom: 24px;
     }
 
     .card {
@@ -61,29 +69,29 @@
 
 <div class="container">
 
-<h1>Survey Instructions</h1>
+<h1>Instructions for the Listening Task</h1>
+<h3>Please read carefully before starting the survey</h3>
 
 <div class="card">
-  <h2>Please read carefully before proceeding</h2>
 
-  <p>You are about to participate in an audio-based evaluation task. Please follow these guidelines:</p>
+  <p><b>What you will do in this study</b></p>
 
   <ul>
-    <li>
-      You will listen to a total of <b>20 audio samples</b>, and answer a short set of questions for each one.
-    </li>
-    <li>
-      Please listen to each audio sample <b>carefully and without distractions</b> before answering.
-    </li>
-    <li>
-      Your responses should be based only on what you hear in the audio.
-    </li>
-    <li>
-      There are no right or wrong answers. We are interested in your honest perception.
-    </li>
-    <li>
-      You may replay any audio as many times as needed before responding.
-    </li>
+    <li>You will listen to short audio clips, each lasting approximately 10 to 20 seconds.</li>
+    <li>Each clip may contain a specific audio characteristic or artifact.</li>
+    <li>After listening, you will answer a few questions about what you perceive.</li>
+  </ul>
+
+  <p><b>Please follow these guidelines for best results</b></p>
+
+  <ul>
+    <li>Use headphones or earphones, recommended.</li>
+    <li>Sit in a quiet environment.</li>
+    <li>Adjust your volume to a comfortable level before starting.</li>
+    <li>You may replay each audio clip if needed.</li>
+    <li>There are no right or wrong answers, please answer based on what you hear.</li>
+    <li>If you are unsure, choose the option that best matches your perception.</li>
+    <li>Please listen carefully and answer thoughtfully. Responses submitted without listening may affect the quality of the study.</li>
   </ul>
 
   <div class="button-wrapper">
