--- a/public/survey.html
+++ b/public/survey.html
@@ -180,7 +180,159 @@
 </div>
 
 <script>
-// YOUR EXISTING SCRIPT REMAINS THE SAME — NO CHANGES MADE
+const APPS_SCRIPT_URL =
+"https://script.google.com/macros/s/AKfycbxdnUOFyy1L5bgZDaztlemC9uqNKtaJsMtY8LxyNtTh6AosCFANjYvx734kMmYl0gOk/exec";
+
+let audioFiles = [
+  "audio/DF_E_2000013.flac",
+  "audio/DF_E_2000024.flac",
+  "audio/DF_E_2000026.flac",
+  "audio/DF_E_2000042.flac",
+  "audio/DF_E_2000048.flac",
+  "audio/DF_E_2000053.flac",
+  "audio/DF_E_2000055.flac",
+  "audio/DF_E_2000075.flac",
+  "audio/DF_E_2000079.flac",
+  "audio/DF_E_2000091.flac",
+  "audio/DF_E_2000100.flac",
+  "audio/DF_E_2000102.flac",
+  "audio/DF_E_2000508.flac",
+  "audio/DF_E_2000524.flac",
+  "audio/DF_E_2749699.flac",
+  "audio/DF_E_2749700.flac",
+  "audio/DF_E_2749711.flac",
+  "audio/DF_E_2749732.flac",
+  "audio/DF_E_2749783.flac",
+  "audio/DF_E_2749817.flac"
+];
+
+function shuffle(array) {
+  for (let i = array.length - 1; i > 0; i--) {
+    const j = Math.floor(Math.random() * (i + 1));
+    [array[i], array[j]] = [array[j], array[i]];
+  }
+  return array;
+}
+audioFiles = shuffle(audioFiles);
+
+let currentIndex = 0;
+let audioPlayed = false;
+let submitting = false;
+
+const audioPlayer = document.getElementById("audioPlayer");
+const audioSource = document.getElementById("audioSource");
+const nextBtn = document.getElementById("nextBtn");
+const loadingWrapper = document.getElementById("loadingWrapper");
+
+audioPlayer.addEventListener("play", () => {
+  audioPlayed = true;
+  document.getElementById("audioError").style.display = "none";
+});
+
+audioSource.src = audioFiles[0];
+audioPlayer.load();
+
+function updateProgress() {
+  const percent = ((currentIndex + 1) / 20) * 100;
+  document.getElementById("progressBar").style.width = percent + "%";
+  document.getElementById("progressText").innerText =
+    `Sample ${currentIndex + 1} of 20`;
+}
+
+function preloadAudio(url) {
+  const a = new Audio();
+  a.src = url;
+}
+
+function preloadNext() {
+  if (currentIndex + 1 < audioFiles.length) {
+    preloadAudio(audioFiles[currentIndex + 1]);
+  }
+}
+
+preloadNext();
+
+async function submitAndNext() {
+
+  if (submitting) return;
+  submitting = true;
+
+  nextBtn.disabled = true;
+  loadingWrapper.style.display = "block";
+
+  document.getElementById("audioError").style.display = "none";
+  document.getElementById("realnessError").style.display = "none";
+  document.getElementById("artifactError").style.display = "none";
+
+  if (!audioPlayed) {
+    document.getElementById("audioError").style.display = "block";
+    submitting = false;
+    nextBtn.disabled = false;
+    loadingWrapper.style.display = "none";
+    return;
+  }
+
+  const realness = document.querySelector('input[name="realness"]:checked');
+  if (!realness) {
+    document.getElementById("realnessError").style.display = "block";
+    submitting = false;
+    nextBtn.disabled = false;
+    loadingWrapper.style.display = "none";
+    return;
+  }
+
+  const artifact = document.querySelector('input[name="artifact"]:checked');
+  if (!artifact) {
+    document.getElementById("artifactError").style.display = "block";
+    submitting = false;
+    nextBtn.disabled = false;
+    loadingWrapper.style.display = "none";
+    return;
+  }
+
+  const payload = {
+    name: localStorage.getItem("name"),
+    age: localStorage.getItem("age"),
+    familiar: localStorage.getItem("familiar"),
+    hearing: localStorage.getItem("hearing"),
+    tech: localStorage.getItem("tech"),
+    sample: currentIndex + 1,
+    realness: realness.value,
+    artifact: artifact.value,
+    comments: document.getElementById("comments").value
+  };
+
+  await fetch(APPS_SCRIPT_URL, {
+    method: "POST",
+    mode: "no-cors",
+    body: JSON.stringify(payload)
+  });
+
+  currentIndex++;
+
+  if (currentIndex >= 20) {
+    window.location.href = "thankyou.html";
+    return;
+  }
+
+  audioSource.src = audioFiles[currentIndex];
+  audioPlayer.load();
+
+  audioPlayed = false;
+
+  document.querySelectorAll('input[name="realness"]').forEach(r => r.checked = false);
+  document.querySelectorAll('input[name="artifact"]').forEach(r => r.checked = false);
+  document.getElementById("comments").value = "";
+
+  updateProgress();
+  preloadNext();
+
+  submitting = false;
+  nextBtn.disabled = false;
+  loadingWrapper.style.display = "none";
+}
+
+updateProgress();
 </script>
 
 </body>
