Refactor survey HTML for improved readability

--- a/public/survey.html
+++ b/public/survey.html
@@ -11,10 +11,7 @@
       color: #111827;
     }
 
-    .container {
-      max-width: 900px;
-      margin: auto;
-    }
+    .container { max-width: 900px; margin: auto; }
 
     .card {
       background: #ffffff;
@@ -24,10 +21,7 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
 
-    h1 {
-      text-align: center;
-      margin-bottom: 8px;
-    }
+    h1 { text-align: center; margin-bottom: 8px; }
 
     .subtitle {
       text-align: center;
@@ -57,14 +51,22 @@
       font-weight: 600;
     }
 
-    audio {
-      width: 100%;
-      margin: 10px 0;
+    audio { width: 100%; margin: 10px 0; }
+
+    .artifact-option {
+      margin-bottom: 10px;
+      padding: 8px 0;
+    }
+
+    .definition {
+      font-size: 13px;
+      color: #4b5563;
+      margin-left: 22px;
     }
 
     textarea {
       width: 100%;
-      min-height: 80px;
+      min-height: 90px;
       padding: 8px;
       border-radius: 8px;
       border: 1px solid #d1d5db;
@@ -80,9 +82,9 @@
       cursor: pointer;
     }
 
-    button:disabled {
+    .secondary-btn {
       background: #9ca3af;
-      cursor: not-allowed;
+      margin-right: 10px;
     }
 
     .error {
@@ -92,31 +94,10 @@
       display: none;
     }
 
-    .hint {
-      font-size: 13px;
-      color: #4b5563;
-      margin-bottom: 8px;
-    }
-
-    #loadingWrapper {
-      display: none;
-      text-align: center;
-      margin: 16px 0;
-    }
-
-    .spinner {
-      width: 32px;
-      height: 32px;
-      border: 4px solid #e5e7eb;
-      border-top: 4px solid #4f46e5;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin: 0 auto 8px auto;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+    .button-row {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
     }
   </style>
 </head>
@@ -126,7 +107,7 @@
 <div class="container">
 
 <h1>Audio Clip</h1>
-<div class="subtitle">Please listen to the audio clip below before answering</div>
+<div class="subtitle">Please listen to the audio clip below.</div>
 
 <div class="card">
 
@@ -134,8 +115,6 @@
     <div class="progress-bar" id="progressBar"></div>
   </div>
   <div class="progress-text" id="progressText">Sample 1 of 20</div>
-
-  <p class="hint">▶️ Please listen to the audio completely before answering.</p>
 
   <audio controls id="audioPlayer">
     <source id="audioSource" src="" type="audio/flac">
@@ -145,84 +124,90 @@
     Please play the audio before proceeding.
   </div>
 
+  <!-- Q1 -->
   <p><b>Q1. Which audio artifact do you think is most prominent in this clip?</b></p>
 
-  <input type="radio" name="artifact" value="Robot"> Robot-like voice<br>
-  <input type="radio" name="artifact" value="Pauses"> Unnatural pauses<br>
-  <input type="radio" name="artifact" value="Repetition"> Word repetition<br>
-  <input type="radio" name="artifact" value="Prosody"> Prosody mismatch<br>
-  <input type="radio" name="artifact" value="Noise"> Background noise<br><br>
+  <div class="artifact-option">
+    <input type="radio" name="artifact" value="Robot">
+    Robot-like voice
+    <div class="definition">Speech sounds mechanical, metallic, or synthetic rather than natural.</div>
+  </div>
+
+  <div class="artifact-option">
+    <input type="radio" name="artifact" value="Pauses">
+    Unnatural pauses
+    <div class="definition">Unexpected or awkward breaks in speech that disrupt natural flow.</div>
+  </div>
+
+  <div class="artifact-option">
+    <input type="radio" name="artifact" value="Repetition">
+    Word repetition
+    <div class="definition">Words or phrases are repeated unnecessarily or unnaturally.</div>
+  </div>
+
+  <div class="artifact-option">
+    <input type="radio" name="artifact" value="Prosody">
+    Prosody mismatch
+    <div class="definition">Unnatural rhythm, pitch, stress, or intonation patterns.</div>
+  </div>
+
+  <div class="artifact-option">
+    <input type="radio" name="artifact" value="Noise">
+    Background noise
+    <div class="definition">Unwanted static, distortion, or environmental noise.</div>
+  </div>
 
   <div id="artifactError" class="error">
     Please select one artifact category.
   </div>
 
+  <!-- Q2 -->
   <p><b>Q2. How confident are you in your selection above?</b></p>
-  <input type="radio" name="realness" value="Low"> Low  
-  <input type="radio" name="realness" value="Medium"> Medium  
-  <input type="radio" name="realness" value="High"> High  
+  <input type="radio" name="confidence" value="Low"> Low  
+  <input type="radio" name="confidence" value="Medium"> Medium  
+  <input type="radio" name="confidence" value="High"> High  
 
-  <div id="realnessError" class="error">
+  <div id="confidenceError" class="error">
     Please select your confidence level.
   </div>
 
+  <!-- Q3 -->
   <p><b>Q3. How easy or difficult was it to identify the artifact in this audio?</b></p>
-  <textarea id="comments" placeholder="Write your response here..."></textarea>
+  <input type="radio" name="difficulty" value="Very Easy"> Very Easy  
+  <input type="radio" name="difficulty" value="Easy"> Easy  
+  <input type="radio" name="difficulty" value="Neutral"> Neutral  
+  <input type="radio" name="difficulty" value="Difficult"> Difficult  
+  <input type="radio" name="difficulty" value="Very Difficult"> Very Difficult  
 
-  <div id="loadingWrapper">
-    <div class="spinner"></div>
-    <div>Loading next sample…</div>
+  <div id="difficultyError" class="error">
+    Please select one option.
   </div>
 
-  <button id="nextBtn" onclick="submitAndNext()">Next Audio</button>
+  <!-- Q4 -->
+  <p><b>Q4. In your own words, what made this audio sound unnatural or unusual to you?</b></p>
+  <textarea id="comments" placeholder="Write your response here..."></textarea>
+
+  <div class="button-row">
+    <button class="secondary-btn" onclick="history.back()">Back</button>
+    <button id="nextBtn" onclick="submitAndNext()">Next Audio</button>
+  </div>
 
 </div>
 </div>
 
 <script>
-const APPS_SCRIPT_URL =
-"https://script.google.com/macros/s/AKfycbxdnUOFyy1L5bgZDaztlemC9uqNKtaJsMtY8LxyNtTh6AosCFANjYvx734kMmYl0gOk/exec";
+const APPS_SCRIPT_URL = "YOUR_SCRIPT_URL_HERE";
 
 let audioFiles = [
   "audio/DF_E_2000013.flac",
-  "audio/DF_E_2000024.flac",
-  "audio/DF_E_2000026.flac",
-  "audio/DF_E_2000042.flac",
-  "audio/DF_E_2000048.flac",
-  "audio/DF_E_2000053.flac",
-  "audio/DF_E_2000055.flac",
-  "audio/DF_E_2000075.flac",
-  "audio/DF_E_2000079.flac",
-  "audio/DF_E_2000091.flac",
-  "audio/DF_E_2000100.flac",
-  "audio/DF_E_2000102.flac",
-  "audio/DF_E_2000508.flac",
-  "audio/DF_E_2000524.flac",
-  "audio/DF_E_2749699.flac",
-  "audio/DF_E_2749700.flac",
-  "audio/DF_E_2749711.flac",
-  "audio/DF_E_2749732.flac",
-  "audio/DF_E_2749783.flac",
-  "audio/DF_E_2749817.flac"
+  "audio/DF_E_2000024.flac"
 ];
-
-function shuffle(array) {
-  for (let i = array.length - 1; i > 0; i--) {
-    const j = Math.floor(Math.random() * (i + 1));
-    [array[i], array[j]] = [array[j], array[i]];
-  }
-  return array;
-}
-audioFiles = shuffle(audioFiles);
 
 let currentIndex = 0;
 let audioPlayed = false;
-let submitting = false;
 
 const audioPlayer = document.getElementById("audioPlayer");
 const audioSource = document.getElementById("audioSource");
-const nextBtn = document.getElementById("nextBtn");
-const loadingWrapper = document.getElementById("loadingWrapper");
 
 audioPlayer.addEventListener("play", () => {
   audioPlayed = true;
@@ -233,72 +218,43 @@ audioSource.src = audioFiles[0];
 audioPlayer.load();
 
 function updateProgress() {
-  const percent = ((currentIndex + 1) / 20) * 100;
+  const percent = ((currentIndex + 1) / audioFiles.length) * 100;
   document.getElementById("progressBar").style.width = percent + "%";
   document.getElementById("progressText").innerText =
-    `Sample ${currentIndex + 1} of 20`;
+    `Sample ${currentIndex + 1} of ${audioFiles.length}`;
 }
-
-function preloadAudio(url) {
-  const a = new Audio();
-  a.src = url;
-}
-
-function preloadNext() {
-  if (currentIndex + 1 < audioFiles.length) {
-    preloadAudio(audioFiles[currentIndex + 1]);
-  }
-}
-
-preloadNext();
 
 async function submitAndNext() {
 
-  if (submitting) return;
-  submitting = true;
-
-  nextBtn.disabled = true;
-  loadingWrapper.style.display = "block";
-
-  document.getElementById("audioError").style.display = "none";
-  document.getElementById("realnessError").style.display = "none";
-  document.getElementById("artifactError").style.display = "none";
-
   if (!audioPlayed) {
     document.getElementById("audioError").style.display = "block";
-    submitting = false;
-    nextBtn.disabled = false;
-    loadingWrapper.style.display = "none";
-    return;
-  }
-
-  const realness = document.querySelector('input[name="realness"]:checked');
-  if (!realness) {
-    document.getElementById("realnessError").style.display = "block";
-    submitting = false;
-    nextBtn.disabled = false;
-    loadingWrapper.style.display = "none";
     return;
   }
 
   const artifact = document.querySelector('input[name="artifact"]:checked');
+  const confidence = document.querySelector('input[name="confidence"]:checked');
+  const difficulty = document.querySelector('input[name="difficulty"]:checked');
+
   if (!artifact) {
     document.getElementById("artifactError").style.display = "block";
-    submitting = false;
-    nextBtn.disabled = false;
-    loadingWrapper.style.display = "none";
+    return;
+  }
+
+  if (!confidence) {
+    document.getElementById("confidenceError").style.display = "block";
+    return;
+  }
+
+  if (!difficulty) {
+    document.getElementById("difficultyError").style.display = "block";
     return;
   }
 
   const payload = {
-    name: localStorage.getItem("name"),
-    age: localStorage.getItem("age"),
-    familiar: localStorage.getItem("familiar"),
-    hearing: localStorage.getItem("hearing"),
-    tech: localStorage.getItem("tech"),
     sample: currentIndex + 1,
-    realness: realness.value,
     artifact: artifact.value,
+    confidence: confidence.value,
+    difficulty: difficulty.value,
     comments: document.getElementById("comments").value
   };
 
@@ -310,26 +266,19 @@ async function submitAndNext() {
 
   currentIndex++;
 
-  if (currentIndex >= 20) {
+  if (currentIndex >= audioFiles.length) {
     window.location.href = "thankyou.html";
     return;
   }
 
   audioSource.src = audioFiles[currentIndex];
   audioPlayer.load();
-
   audioPlayed = false;
 
-  document.querySelectorAll('input[name="realness"]').forEach(r => r.checked = false);
-  document.querySelectorAll('input[name="artifact"]').forEach(r => r.checked = false);
+  document.querySelectorAll("input[type=radio]").forEach(r => r.checked = false);
   document.getElementById("comments").value = "";
 
   updateProgress();
-  preloadNext();
-
-  submitting = false;
-  nextBtn.disabled = false;
-  loadingWrapper.style.display = "none";
 }
 
 updateProgress();
